--- a/README.adoc
+++ b/README.adoc
@@ -80,17 +80,17 @@ Further reading +
 * http://inimino.org/~inimino/blog/javascript_semicolons[JavaScript Semicolon Insertion; Everything you need to know]
 * http://mislav.net/2010/05/semicolons/[Semicolons in JavaScript are optional]
 
-#### `quotes`
+### `quotes`
 
   Double.
 
   Some languages treat single/double as different types (Java, Haskell, PureScript, ...), don't even have single quotes (Clojure), or idiomatically use double (HTML). It is therefore better (Assuming a polyglot programmer) for habit building and retention to use double quotes as well in JavaScript.
 
-#### `no-multiple-empty-lines`
+### `no-multiple-empty-lines`
 
   Up to three allowed. Two empty lines are not enough to clearly partition major sections of a module (e.g. after all `import ...`).
 
-#### `import/no-namespace`
+### `import/no-namespace`
 
   Yes.
 
@@ -107,15 +107,15 @@ Further reading +
   * This is simpler for developers because they have fewer options.
   * This is easier to read; `* as ...` scattered multiple times throughout imports is noisy.
 
-#### `import/no-commonjs`
+### `import/no-commonjs`
 
   No. Mixing `require` with `import` in one module or codebase is jarring at best.
 
-#### `fp/no-arguments`
+### `fp/no-arguments`
 
   > Functional programming works better with known and explicit parameters. Also, having an undefined number of parameters does not work well with currying.
 
-##### Fail
+### Fail
 
 ```
 function sum() {
@@ -126,7 +126,7 @@ function sum() {
 sum(1, 2, 3);
 ```
 
-##### Pass
+### Pass
 
 ```
 function sum(numbers) {
@@ -138,7 +138,7 @@ sum([1, 2, 3]);
 var args = node.arguments;
 ```
 
-#### `no-class`
+### `no-class`
 
 We forbid ES2015 Class syntax.
 
@@ -146,7 +146,7 @@ We forbid ES2015 Class syntax.
 
 Further reading: https://github.com/joshburgess/not-awesome-es6-classes/[Not Awesome: ES6 Classes; A curated list of resources on why ES6 (aka ES2015) classes are NOT awesome]
 
-##### Fail
+### Fail
 
 ```
 class Polygon {
@@ -157,7 +157,7 @@ class Polygon {
 }
 ```
 
-##### Pass
+### Pass
 
 ```
 function polygon(height, width) {
@@ -168,19 +168,19 @@ function polygon(height, width) {
 }
 ```
 
-#### `fp/no-delete`
+### `fp/no-delete`
 
 > delete is an operator to remove fields from an object or elements from an array. This purposely mutates data, which is not wanted when doing functional programming.
 
 Also, https://github.com/google/google-api-nodejs-client/issues/375[Avoid using delete operator].
 
-##### Fail
+### Fail
 ```
 delete foo;
 delete foo.bar;
 delete foo[bar];
 ```
-##### Pass
+### Pass
 ```
 var _ = require('lodash/fp');
 
@@ -188,21 +188,21 @@ var fooWithoutBar = _.omit('bar', foo);
 var fooWithoutField = _.omit(bar, foo);
 ```
 
-#### `fp/no-events`
+### `fp/no-events`
 
 > The use of EventEmitter with the events module provided by Node.js promotes implicit side-effects by emitting and listening to events. Instead of events, you should prefer activating the wanted effects by calling the functions you wish to use explicitly.
 
 And/or use a functional reactive programming library instead: https://github.com/cujojs/most[`most`], https://github.com/Reactive-Extensions/RxJS[`rxjs`].
 
-##### Fail
+### Fail
 
 ```
 import EventEmitter from 'events';
 ```
 
-#### `fp/no-get-set`
+### `fp/no-get-set`
 
-##### Fail
+### Fail
 ```
 const person = {
   name: 'Some Name',
@@ -228,7 +228,7 @@ person.__defineSetter__('name', function(name) {
   this.name = name.trim();
 });
 ```
-##### Pass
+### Pass
 ```
 const person = {
   name: 'Some Name',
@@ -250,28 +250,28 @@ function setAge(age, person) {
 }
 ```
 
-#### `fp/no-let`
+### `fp/no-let`
 
 > If you want to program as if your variables are immutable, part of the answer is to not allow your variables to be reassigned. By not allowing the use of let and var, variables that you declared may not be reassigned.
 
-##### Fail
+### Fail
 ```
 let a = 1;
 let b = 2,
     c = 3;
 let d;
 ```
-##### Pass
+### Pass
 ```
 const a = 1;
 const b = 2,
       c = 3;
 ```
 
-#### `fp/no-loops`
+### `fp/no-loops`
 > Loops, such as for or while loops, work well when using a procedural paradigm. In functional programming, recursion or implementation agnostic operations like map, filter and reduce are preferred.
 
-##### Fail
+### Fail
 ```
 const result = [];
 const elements = [1, 2, 3];
@@ -300,7 +300,7 @@ do {
   n *= 2;
 } while (n < 100);
 ```
-##### Pass
+### Pass
 ```
 const elements = [1, 2, 3];
 
@@ -316,11 +316,11 @@ function doubleThemAll(n) {
 }
 const result = doubleThemAll(n);
 ```
-#### `fp/no-this`
+### `fp/no-this`
 
 > When doing functional programming, you want to avoid having stateful objects and instead use simple JavaScript objects.
 
-##### Fail
+### Fail
 ```
 const object = {
   numbers: [1, 2, 3],
@@ -331,7 +331,7 @@ const object = {
 
 object.sum();
 ```
-##### Pass
+### Pass
 ```
 function sum(numbers) {
   return numbers.reduce((a, b) => a + b);
