wip: usage docs again

--- a/README.adoc
+++ b/README.adoc
@@ -28,11 +28,7 @@ npm install --save-dev \
 
 ## Usage
 
-There are two configurations available: "client" or "server". The main difference between them is that client requires the `vue` plugin and does not regulate `this` usage because `Vue` relies on it heavily (unfortunately). Unless you are writing Vue code, use the server configuration (or just the default). By default "server" is used.
-
-To select a configuration you want to use simply add it into your `package.json` (http://eslint.org/docs/user-guide/configuring#extending-configuration-files[see official docs for more information]).
-
-Use the default config (`server`):
+In `package.json`, One of:
 
 ```
   "eslintConfig": {
@@ -40,15 +36,20 @@ Use the default config (`server`):
   }
 ```
 
-Use a specialized config:
+(Defaults to `server`)
 
 ```
   "eslintConfig": {
-    "extends": "ssense/SPECIALIZATION"
+    "extends": "ssense/server"
+  }
+```
+```
+  "eslintConfig": {
+    "extends": "ssense/client"
   }
 ```
 
-`SPECIALIZATION` may be one of `server`, `client`:
+There are two specialized configurations available, `client` or `server`. `client` requires the `vue` plugin and does not regulate `this` usage because Vue relies on it heavily (unfortunately). Unless you are writing Vue code do not use `client`. By default `server` is used.
 
 
 
